2013-08-12 Miguel de Dios  <miguel.dedios@artica.es>
	
	* operation/projects/people_manager.php: fixed the PHP warnings.

2013-08-12 Miguel de Dios  <miguel.dedios@artica.es>
	
	* operation/projects/task.php, include/functions_form.php: fixed the
	PHP warnings.

2013-08-12 Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_user.php: fixed the PHP warnings about vars
	without value.

2013-08-12 Miguel de Dios  <miguel.dedios@artica.es>
	
	* operation/users/user_spare_workunit.php: fixed PHP warnings.

2013-08-12 Miguel de Dios  <miguel.dedios@artica.es>
	
	* operation/projects/task_planning.php,
	operation/projects/project_detail.php, include/functions_graph.php:
	fixed the PHP warnings when try to iterate a not array var in
	some foreachs.

2013-08-12 Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_db.php: fixed the function
	"calculate_project_deviation" when have 0 hours.

2013-08-12 Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_projects.php, operation/projects/project.php,
	ajax.php: fixed PHP warnings.

2013-08-12 Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_html.php: fixed into the function
	"print_input_text_extended" the attributes as array.
	
	* operation/projects/project_detail.php,
	operation/projects/project.php: fixed PHP warnings.

2013-08-12  Vanessa Gil <vanessa.gil@artica.es>

	* operation/incidents/incident_detail.php: When changing 
	the incident group sets like owner the default user of 
	this group.

2013-08-12  Vanessa Gil <vanessa.gil@artica.es>

	* include/functions_form.php
	  include/functions_incidents.php
	  operation/incidents/incident_search.php
	  operation/incidents/incident_search_logic.php: Added
	fields to search incidents.

2013-08-09  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* extras/migrate.sql: Changes on some column names.
	
	* include/functions.php: Improved the function
	"print_priority_flag_image".
	